Fix global links to local. Add missed resources

--- a/docs/_includes/ru/footer.html
+++ b/docs/_includes/ru/footer.html
@@ -16,7 +16,7 @@
     </div>
 
     <!--  Google analytics.  -->
-    <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://ugene.unipro.ru/ugene_news.rss"/>
+    <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/ugene_news.rss"/>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-7212598-1']);
