--- a/docs/_includes/ru/header.html
+++ b/docs/_includes/ru/header.html
@@ -24,9 +24,9 @@
             </ul>
         </li>
         <li>
-            <a href="http://ugene.net/forum">Сообщество</a>
+            <a href="http://ugene.unipro.ru/forum">Сообщество</a>
             <ul class="sub-menu-list">
-                <li><a href="http://ugene.net/forum">Форум</a></li>
+                <li><a href="http://ugene.unipro.ru/forum">Форум</a></li>
                 <li><a href="https://ugene.dev/tracker">Трекер</a></li>
                 <li><a href="https://github.com/ugeneunipro/ugene">Исходный код</a></li>
             </ul>
