--- a/docs/_sass/body.scss
+++ b/docs/_sass/body.scss
@@ -3,7 +3,7 @@ html {
 }
 body {
   background-color: white;
-  font-family: Verdana, sans-serif;
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   height: 100%;
