Add more download links + styles tune-up

--- a/docs/_sass/header.scss
+++ b/docs/_sass/header.scss
@@ -101,6 +101,7 @@
 
       li {
         min-width: 150px;
+        width: calc(100% - 40px);
         padding-left: 10px;
         padding-right: 30px;
       }
