Add breakpad url source files. Update links to videos

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -16,8 +16,8 @@
             <a href="/documentation.html">Documentation</a>
             <ul class="sub-menu-list">
                 <li><a href="/key_features.html">UGENE Key Features</a></li>
-                <li><a href="http://doc.ugene.net/wiki/display/QSG/Quick+Start+Guide">Quick Start Guide</a></li>
-                <li><a href="http://doc.ugene.net/wiki/display/UM38/Unipro+UGENE+User+Manual">UGENE Manual</a></li>
+                <li><a href="https://doc.ugene.net/wiki/display/QSG/Quick+Start+Guide">Quick Start Guide</a></li>
+                <li><a href="https://doc.ugene.net/wiki/display/UM38/Unipro+UGENE+User+Manual">UGENE Manual</a></li>
                 <li><a href="/podcast.html">YouTube Podcast</a></li>
                 <li><a href="/changelist.html">Version History</a></li>
                 <li><a href="/faq.html">FAQ</a></li>
