#31 Fix docs links

--- a/docs/_includes/ru/header.html
+++ b/docs/_includes/ru/header.html
@@ -17,7 +17,7 @@
             <ul class="sub-menu-list">
                 <li><a href="/ru/key_features.html">Основные возможности</a></li>
                 <li><a href="https://doc.ugene.net/wiki/display/QSG/Quick+Start+Guide">Быстрый старт</a></li>
-                <li><a href="https://doc.ugene.net/wiki/display/UM38/Unipro+UGENE+User+Manual">Руководство</a></li>
+                <li><a href="https://doc.ugene.net/wiki/display/UM{{site.ugene.doc_version}}/Unipro+UGENE+User+Manual">Руководство</a></li>
                 <li><a href="/ru/podcast.html">Видео уроки</a></li>
                 <li><a href="/ru/changelist.html">История изменений</a></li>
                 <li><a href="/ru/faq.html">Частые вопросы</a></li>
