#18 Fix gallery on the front page

--- a/docs/assets/css/site.scss
+++ b/docs/assets/css/site.scss
@@ -5,6 +5,7 @@
 @import 'header';
 @import 'links';
 @import 'main';
+@import 'orangebox';
 @import 'pages/changelist';
 @import 'pages/documentation';
 @import 'pages/download';
