--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -27,9 +27,9 @@
             <a href="/learn.html">Learn</a>
         </li>
         <li>
-            <a href="http://ugene.unipro.ru/forum">Community</a>
+            <a href="http://forum.ugene.net/forum">Community</a>
             <ul class="sub-menu-list">
-                <li><a href="http://ugene.unipro.ru/forum">Forum</a></li>
+                <li><a href="http://forum.ugene.net/forum">Forum</a></li>
                 <li><a href="https://ugene.dev/tracker">Bug Tracker</a></li>
                 <li><a href="https://github.com/ugeneunipro/ugene"> Source Code</a></li>
             </ul>
