--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -18,8 +18,9 @@
     <!--  Google analytics.  -->
     <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://ugene.unipro.ru/ugene_news.rss"/>
     <!--suppress SpellCheckingInspection -->
+    <!--suppress ES6ConvertVarToLetConst -->
     <script type="text/javascript">
-      let _gaq = _gaq || [];
+      var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-7212598-1']);
       _gaq.push(['_trackPageview']);
 
