--- a/docs/_includes/ru/footer.html
+++ b/docs/_includes/ru/footer.html
@@ -17,6 +17,7 @@
 
     <!--  Google analytics.  -->
     <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/ugene_news.rss"/>
+    <!--suppress ES6ConvertVarToLetConst -->
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-7212598-1']);
