Replace all forum links to https.

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -27,9 +27,9 @@
             <a href="/learn.html">Learn</a>
         </li>
         <li>
-            <a href="https://forum.ugene.net/forum" target="_blank">Community</a>
+            <a href="https://forum.ugene.net/forum/" target="_blank">Community</a>
             <ul class="sub-menu-list">
-                <li><a href="https://forum.ugene.net/forum" target="_blank">Forum</a></li>
+                <li><a href="https://forum.ugene.net/forum/" target="_blank">Forum</a></li>
                 <li><a href="https://ugene.dev/tracker" target="_blank">Bug Tracker</a></li>
                 <li><a href="https://github.com/ugeneunipro/ugene" target="_blank"> Source Code</a></li>
             </ul>
