--- a/docs/_includes/ru/header.html
+++ b/docs/_includes/ru/header.html
@@ -24,9 +24,9 @@
             </ul>
         </li>
         <li>
-            <a href="https://forum.ugene.net/forum" target="_blank">Сообщество</a>
+            <a href="https://forum.ugene.net/forum/" target="_blank">Сообщество</a>
             <ul class="sub-menu-list">
-                <li><a href="https://forum.ugene.net/forum" target="_blank">Форум</a></li>
+                <li><a href="https://forum.ugene.net/forum/" target="_blank">Форум</a></li>
                 <li><a href="https://ugene.dev/tracker" target="_blank">Трекер</a></li>
                 <li><a href="https://github.com/ugeneunipro/ugene" target="_blank">Исходный код</a></li>
             </ul>
