#46 Stop opening new tabs for site-local links

--- a/docs/_includes/ru/header.html
+++ b/docs/_includes/ru/header.html
@@ -15,12 +15,12 @@
         <li>
             <a href="/ru/documentation.html">Документация</a>
             <ul class="sub-menu-list">
-                <li><a href="/ru/key_features.html" target="_blank">Основные возможности</a></li>
+                <li><a href="/ru/key_features.html">Основные возможности</a></li>
                 <li><a href="https://doc.ugene.net/wiki/display/QSG/Quick+Start+Guide" target="_blank">Быстрый старт</a></li>
                 <li><a href="https://doc.ugene.net/wiki/display/UM{{site.ugene.doc_version}}/Unipro+UGENE+User+Manual" target="_blank">Руководство</a></li>
-                <li><a href="/ru/podcast.html" target="_blank">Видео уроки</a></li>
-                <li><a href="/ru/changelist.html" target="_blank">История изменений</a></li>
-                <li><a href="/ru/faq.html" target="_blank">Частые вопросы</a></li>
+                <li><a href="/ru/podcast.html">Видео уроки</a></li>
+                <li><a href="/ru/changelist.html">История изменений</a></li>
+                <li><a href="/ru/faq.html">Частые вопросы</a></li>
             </ul>
         </li>
         <li>
