--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -18,9 +18,9 @@
                 <li><a href="/key_features.html">UGENE Key Features</a></li>
                 <li><a href="https://doc.ugene.net/wiki/display/QSG/Quick+Start+Guide" target="_blank">Quick Start Guide</a></li>
                 <li><a href="https://doc.ugene.net/wiki/display/UM{{site.ugene.doc_version}}/Unipro+UGENE+User+Manual" target="_blank">UGENE Manual</a></li>
-                <li><a href="/podcast.html" target="_blank">YouTube Podcast</a></li>
-                <li><a href="/changelist.html" target="_blank">Version History</a></li>
-                <li><a href="/faq.html" target="_blank">FAQ</a></li>
+                <li><a href="/podcast.html">YouTube Podcast</a></li>
+                <li><a href="/changelist.html">Version History</a></li>
+                <li><a href="/faq.html">FAQ</a></li>
             </ul>
         </li>
         <li>
@@ -35,14 +35,14 @@
             </ul>
         </li>
         <li>
-            <a href="/download.html" target="_blank">Downloads</a>
+            <a href="/download.html">Downloads</a>
             <ul class="sub-menu-list">
-                <li><a href="/download.html" target="_blank">Recommended download</a></li>
-                <li><a href="/download-all.html" target="_blank">All downloads</a></li>
+                <li><a href="/download.html">Recommended download</a></li>
+                <li><a href="/download-all.html">All downloads</a></li>
             </ul>
         </li>
-        <li><a href="/support.html" target="_blank">Support</a></li>
-        <li><a href="/contacts.html" target="_blank">Contacts</a></li>
+        <li><a href="/support.html">Support</a></li>
+        <li><a href="/contacts.html">Contacts</a></li>
         <li class="donate-menu-item">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
                 <input type="hidden" name="cmd" value="_s-xclick">
