[En&Ru] Open external site links in new tab.

--- a/docs/_includes/ru/footer.html
+++ b/docs/_includes/ru/footer.html
@@ -12,7 +12,7 @@
 
     <!-- Copyright.   -->
     <div class="copyright-block">
-        <a href="http://unipro.ru"> Унипро, Россия, 2008&#150;2021</a>
+        <a href="http://unipro.ru" target="_blank"> Унипро, Россия, 2008&#150;2021</a>
     </div>
 
     <!--  Google analytics.  -->
