--- a/docs/_includes/ru/header.html
+++ b/docs/_includes/ru/header.html
@@ -32,11 +32,7 @@
             </ul>
         </li>
         <li>
-            <a href="/ru/download.html">Скачать</a>
-            <ul class="sub-menu-list">
-                <li><a href="/ru/download.html">Рекомендованный пакет</a></li>
-                <li><a href="/ru/download-all.html">Все варианты</a></li>
-            </ul>
+            <a href="/ru/download-all.html">Скачать</a>
         </li>
         <li><a href="/ru/support.html">Поддержка</a></li>
         <li><a href="/ru/contacts.html">Контакты</a></li>
