--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -35,11 +35,7 @@
             </ul>
         </li>
         <li>
-            <a href="/download.html">Downloads</a>
-            <ul class="sub-menu-list">
-                <li><a href="/download.html">Recommended download</a></li>
-                <li><a href="/download-all.html">All downloads</a></li>
-            </ul>
+            <a href="/download-all.html">Downloads</a>
         </li>
         <li><a href="/support.html">Support</a></li>
         <li><a href="/contacts.html">Contacts</a></li>
