Fix A11y issues on the front page

--- a/docs/_sass/footer.scss
+++ b/docs/_sass/footer.scss
@@ -6,11 +6,11 @@
     display: inline-block;
 
     a {
-      color: gray;
+      color: #707070;
       text-decoration: none;
 
       &:hover, &:active {
-        color: gray;
+        color: #707070;
       }
 
       img {
