--- a/docs/assets/css/site.scss
+++ b/docs/assets/css/site.scss
@@ -11,6 +11,7 @@
 @import 'pages/download';
 @import 'pages/index';
 @import 'pages/learn';
+@import 'pages/news';
 @import 'pages/podcast';
 @import 'pages/support';
 
