[Tr] Added required for the Turkish version of the site.

--- a/docs/_sass/footer.scss
+++ b/docs/_sass/footer.scss
@@ -17,6 +17,13 @@
         margin-right: 3px;
       }
     }
+
+    .languages-row {
+      td {
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+    }
   }
 
   .copyright-block {
