--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,11 +2,25 @@
 
     <!--  Language switch.  -->
     <div class="language-block">
-        <a class="language-switch-link" href="/ru/" title="Переключить язык на русский">
-            <img src="/assets/images/flags/ru.png" alt="Russian flag"> Русский
-        </a>
+        <table align="center" cellpadding="0" cellspacing="0" valign="top">
+            <tbody>
+                <tr class="languages-row">
+                    <td>
+                        <a class="language-switch-link-ru" href="/ru/" title="Переключить язык на русский">
+                            <img src="/assets/images/flags/ru.png" alt="Russian flag"> Русский
+                        </a>
+                    </td>
+                    <td>
+                        <a class="language-switch-link-tr" href="/tr/" title="Dili türkçeye çevir">
+                            <img src="/assets/images/flags/tr.png" alt="Turkish flag"> Türkçe
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
         <script>
-          $('.language-switch-link').attr('href', '/ru' + location.pathname);
+          $('.language-switch-link-ru').attr('href', '/ru' + location.pathname);
+          $('.language-switch-link-tr').attr('href', '/tr' + location.pathname);
         </script>
     </div>
 
