Some links have changed http to https.

--- a/docs/_includes/ru/footer.html
+++ b/docs/_includes/ru/footer.html
@@ -12,7 +12,7 @@
 
     <!-- Copyright.   -->
     <div class="copyright-block">
-        <a href="http://unipro.ru" target="_blank"> Унипро, Россия, 2008&#150;{{site.current_year}}</a>
+        <a href="https://unipro.ru" target="_blank"> Унипро, Россия, 2008&#150;{{site.current_year}}</a>
     </div>
 
     <!--  Google analytics.  -->
