--- a/docs/_includes/tr/header.html
+++ b/docs/_includes/tr/header.html
@@ -27,7 +27,7 @@
             <a href="https://forum.ugene.net/forum/" target="_blank">Topluluk</a>
             <ul class="sub-menu-list">
                 <li><a href="https://forum.ugene.net/forum/" target="_blank">Forum</a></li>
-                <li><a href="https://ugene.dev/tracker" target="_blank">Hata izci</a></li>
+                <li><a href="https://ugene.dev/tracker" target="_blank">Hata izleyici</a></li>
                 <li><a href="https://github.com/ugeneunipro/ugene" target="_blank">Kaynak kodu</a></li>
             </ul>
         </li>
@@ -41,7 +41,7 @@
                 <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="4YFBK5CNVTSPY">
                 <input type="hidden" name="lc" value="US">
-                <a class="donate" href="javascript:" onclick="parentNode.submit()">Bağış yapmak</a>
+                <a class="donate" href="javascript:" onclick="parentNode.submit()">Bağış yap</a>
             </form>
         </li>
     </ul>
