--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -39,13 +39,6 @@
         </li>
         <li><a href="/support.html">Support</a></li>
         <li><a href="/contacts.html">Contacts</a></li>
-        <li class="donate-menu-item">
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="4YFBK5CNVTSPY">
-                <input type="hidden" name="lc" value="US">
-                <a class="donate" href="javascript:" onclick="parentNode.submit()">Donate</a>
-            </form>
-        </li>
+        <li class="donate-menu-item"><a href="https://patreon.com/uniprougene" class="donate" target="_blank">Patreon</a></li>
     </ul>
 </div>
