--- a/docs/_includes/tr/header.html
+++ b/docs/_includes/tr/header.html
@@ -36,13 +36,6 @@
         </li>
         <li><a href="/tr/support.html">Destek</a></li>
         <li><a href="/tr/contacts.html">İletişim</a></li>
-        <li class="donate-menu-item">
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="4YFBK5CNVTSPY">
-                <input type="hidden" name="lc" value="US">
-                <a class="donate" href="javascript:" onclick="parentNode.submit()">Bağış yap</a>
-            </form>
-        </li>
+        <li class="donate-menu-item"><a href="https://patreon.com/uniprougene" class="donate" target="_blank">Patreon</a></li>
     </ul>
 </div>
