Add link to Boosty

--- a/docs/_includes/ru/header.html
+++ b/docs/_includes/ru/header.html
@@ -36,6 +36,7 @@
         </li>
         <li><a href="/ru/support.html">Поддержка</a></li>
         <li><a href="/ru/contacts.html">Контакты</a></li>
-        <li class="donate-menu-item"><a href="https://patreon.com/uniprougene" class="donate" target="_blank">Patreon</a></li>
+        <li class="donate-menu-item"><a href="https://patreon.com/uniprougene" class="donate" target="_blank" title="Поддержать UGENE на Patreon">Patreon</a></li>
+        <li class="donate-menu-item-2"><a href="https://boosty.to/ugene" class="donate donate-2" target="_blank" title="Поддержать UGENE на Boosty">Boosty</a></li>
     </ul>
 </div>
