--- a/docs/_includes/tr/header.html
+++ b/docs/_includes/tr/header.html
@@ -37,5 +37,6 @@
         <li><a href="/tr/support.html">Destek</a></li>
         <li><a href="/tr/contacts.html">İletişim</a></li>
         <li class="donate-menu-item"><a href="https://patreon.com/uniprougene" class="donate" target="_blank">Patreon</a></li>
+        <li class="donate-menu-item-2"><a href="https://boosty.to/ugene" class="donate donate-2" target="_blank">Boosty</a></li>
     </ul>
 </div>
