--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -39,6 +39,7 @@
         </li>
         <li><a href="/support.html">Support</a></li>
         <li><a href="/contacts.html">Contacts</a></li>
-        <li class="donate-menu-item"><a href="https://patreon.com/uniprougene" class="donate" target="_blank">Patreon</a></li>
+        <li class="donate-menu-item"><a href="https://patreon.com/uniprougene" class="donate" target="_blank" title="Support UGENE on Patreon">Patreon</a></li>
+        <li class="donate-menu-item-2"><a href="https://boosty.to/ugene" class="donate donate-2" target="_blank" title="Support UGENE on Boosty">Boosty</a></li>
     </ul>
 </div>
